# task.django-warehouse

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
spareparts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
spareparts/management/commands/: distribute_sparepart_balances.py  show_spareparts_current_amounts.py  tests.py
spareparts/migrations/: 0001_initial.py
tasks/: models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
warehouse/: settings.py  urls.py
